--- a/cycler-interface/cycler-interface/cycler-interface.csproj
+++ b/cycler-interface/cycler-interface/cycler-interface.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="basytecAPI.cs" />
+    <Compile Include="peltierTCP.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
